fix: extreme responsiveness pass (Grade-A mobile fixes, word wrapping, overflow protection)

--- a/project.html
+++ b/project.html
@@ -151,13 +151,13 @@
 
                             <h2 style="margin-top: 40px; margin-bottom: 20px;">KEY_FEATURES</h2>
                             <ul id="project-features"
-                                style="font-size: 1.1rem; line-height: 1.6; margin-left: 20px; color: #444;">
+                                style="font-size: 1.1rem; line-height: 1.6; padding-left: 20px; margin-left: 0; color: #444;">
                                 <!-- Features list -->
                             </ul>
 
                             <h2 style="margin-top: 40px; margin-bottom: 20px;">TECHNICAL_ARCHITECTURE</h2>
                             <p id="technical-details"
-                                style="font-size: 1.1rem; line-height: 1.6; background: #f8f9fa; padding: 20px; border-left: 4px solid var(--border-black);">
+                                style="font-size: 1.1rem; line-height: 1.6; background: #f8f9fa; padding: 15px; border-left: 4px solid var(--border-black); overflow-wrap: break-word;">
                                 <!-- Deep tech details -->
                             </p>
 
