feat: update profile picture and replace placeholder

--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
                         <span class="window-title">LARSSON_PORTRAIT.JPG</span>
                     </div>
                     <div class="profile-image">
-                        <div class="placeholder-img">
-                            <span>MSc Data Science<br>@ Kristu Jayanti</span>
-                        </div>
+                        <img src="profile.jpg" alt="Larsson Profile"
+                            style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                 </div>
 
