style: rename window titles for better professionalism

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="hero-container">
                 <div class="profile-window window">
                     <div class="window-header">
-                        <span class="window-title">LARSSON_PORTRAIT.JPG</span>
+                        <span class="window-title">IDENT_SNAPSHOT.JPG</span>
                     </div>
                     <div class="profile-image">
                         <img src="profile.jpg" alt="Larsson Profile"
@@ -40,34 +40,35 @@
 
                 <div class="window hero-window">
                     <div class="window-header">
-                        <span class="window-title">PEAK_PERFORMANCE.EXE</span>
-                        <div class="window-controls">
-                            <span>_</span>
-                            <span>□</span>
-                            <span>×</span>
+                        <div class="window-header">
+                            <span class="window-title">DEVELOPER_MANIFESTO.EXE</span>
+                            <div class="window-controls">
+                                <span>_</span>
+                                <span>□</span>
+                                <span>×</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="window-content hero-content">
-                        <h1>I'M <span class="highlight-magenta">LARSSON</span></h1>
-                        <p>MSc Data Science student at Kristu Jayanti College. I build predictive models, community
-                            apps, and productivity tools with sustainable peak discipline.</p>
-                        <div class="hero-actions">
-                            <a href="#projects" class="btn-green">VIEW PROJECTS</a>
-                            <a href="#contact" class="btn-blue">CONNECT()</a>
+                        <div class="window-content hero-content">
+                            <h1>I'M <span class="highlight-magenta">LARSSON</span></h1>
+                            <p>MSc Data Science student at Kristu Jayanti College. I build predictive models, community
+                                apps, and productivity tools with sustainable peak discipline.</p>
+                            <div class="hero-actions">
+                                <a href="#projects" class="btn-green">VIEW PROJECTS</a>
+                                <a href="#contact" class="btn-blue">CONNECT()</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <!-- Stickers -->
-            <div class="sticker sticker-1">🧠</div>
-            <div class="sticker sticker-2">📊</div>
-            <div class="sticker sticker-3">📱</div>
-            <div class="sticker sticker-4">SUSTAINABLE_PEAK</div>
+                <!-- Stickers -->
+                <div class="sticker sticker-1">🧠</div>
+                <div class="sticker sticker-2">📊</div>
+                <div class="sticker sticker-3">📱</div>
+                <div class="sticker sticker-4">SUSTAINABLE_PEAK</div>
 
-            <div class="floating-box box-1">PYTHON</div>
-            <div class="floating-box box-2">REACT_NATIVE</div>
-            <div class="floating-box box-3">FIREBASE</div>
+                <div class="floating-box box-1">PYTHON</div>
+                <div class="floating-box box-2">REACT_NATIVE</div>
+                <div class="floating-box box-3">FIREBASE</div>
         </section>
 
         <section id="projects" class="projects">
@@ -142,7 +143,7 @@
             <div class="about-container">
                 <div class="about-text window">
                     <div class="window-header">
-                        <span class="window-title">README_PERSONAL.MD</span>
+                        <span class="window-title">PROFILE_BIO.MD</span>
                     </div>
                     <div class="window-content">
                         <h2>SYSTEMATIC GROWTH, <br> NOT BURNOUT.</h2>
