--- a/project.html
+++ b/project.html
@@ -136,7 +136,7 @@
             <!-- Dynamic Content Load -->
             <div class="window project-detail-window">
                 <div class="window-header">
-                    <span id="window-title" class="window-title">LOADING_PROJECT.EXE</span>
+                    <span id="window-title" class="window-title">LOAD_SYS.EXE</span>
                 </div>
                 <div class="window-content">
                     <div class="project-header">
