feat: rename research to about and add site introduction

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="logo">LARSSON.DS</div>
         <nav>
             <a href="#projects" class="nav-link">PROJECTS</a>
-            <a href="#about" class="nav-link">RESEARCH</a>
+            <a href="#about" class="nav-link">ABOUT</a>
             <a href="#contact" class="nav-link btn-yellow">HIRE_ME.CSV</a>
         </nav>
     </header>
@@ -49,6 +49,10 @@
                             </div>
                         </div>
                         <div class="window-content hero-content">
+                            <div class="site-intro"
+                                style="font-size: 0.8rem; font-weight: 800; color: #666; margin-bottom: 20px; border-bottom: 2px dashed #ccc; padding-bottom: 10px;">
+                                /SYSTEM_INITIALIZED/ WELCOME_TO_PORTFOLIO.V1
+                            </div>
                             <h1>I'M <span class="highlight-magenta">LARSSON</span></h1>
                             <p>MSc Data Science student at Kristu Jayanti College. I build predictive models, community
                                 apps, and productivity tools with sustainable peak discipline.</p>
