--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </section>
 
         <section id="projects" class="projects">
-            <h2 class="section-title">FEATURED_PROJECTS</h2>
+            <h2 class="section-title">MY_PROJECTS</h2>
             <div class="project-grid">
                 <!-- Project 1: ILA App -->
                 <a href="project.html?id=ila" class="project-card window">
