--- a/index.html
+++ b/index.html
@@ -49,8 +49,12 @@
                     </div>
                     <div class="window-content hero-content">
                         <div class="site-intro"
-                            style="font-size: 0.8rem; font-weight: 800; color: #666; margin-bottom: 20px; border-bottom: 2px dashed #ccc; padding-bottom: 10px;">
-                            /SYSTEM_INITIALIZED/ WELCOME_TO_PORTFOLIO.V1
+                            style="font-size: 0.9rem; font-weight: 800; color: #444; margin-bottom: 20px; border-bottom: 2px solid var(--border-black); padding-bottom: 15px; line-height: 1.4;">
+                            <span style="background: var(--bg-yellow); padding: 2px 5px;">[PURPOSE]</span>
+                            This is my digital terminal—a curated space showcasing my work in
+                            <span class="highlight-magenta">Data Science</span>, AI architecture, and community-driven
+                            application development.
+                            My goal is to bridge complex data insights with high-performance user experiences.
                         </div>
                         <h1>I'M <span class="highlight-magenta">LARSSON</span></h1>
                         <p>MSc Data Science student at Kristu Jayanti College. I build predictive models, community
