refactor: simplify hero section, remove bio paragraph, and fix intro overlap

--- a/index.html
+++ b/index.html
@@ -48,17 +48,13 @@
                         </div>
                     </div>
                     <div class="window-content hero-content">
-                        <div class="site-intro"
-                            style="font-size: 0.9rem; font-weight: 800; color: #444; margin-bottom: 20px; border-bottom: 2px solid var(--border-black); padding-bottom: 15px; line-height: 1.4;">
-                            <span style="background: var(--bg-yellow); padding: 2px 5px;">[PURPOSE]</span>
-                            This is my digital terminal—a curated space showcasing my work in
-                            <span class="highlight-magenta">Data Science</span>, AI architecture, and community-driven
-                            application development.
-                            My goal is to bridge complex data insights with high-performance user experiences.
+                        <div class="site-intro">
+                            <span class="intro-tag">[PURPOSE]</span>
+                            Welcome to my digital terminal. This space is a curated showcase of my technical
+                            evolution in <span class="intro-highlight">Data Science</span>, AI architecture, and
+                            community-driven development.
                         </div>
                         <h1>I'M <span class="highlight-magenta">LARSSON</span></h1>
-                        <p>MSc Data Science student at Kristu Jayanti College. I build predictive models, community
-                            apps, and productivity tools with sustainable peak discipline.</p>
                         <div class="hero-actions">
                             <a href="#projects" class="btn-green">VIEW PROJECTS</a>
                             <a href="#contact" class="btn-blue">CONNECT()</a>
