feat: update hero section with personalized introduction

--- a/index.html
+++ b/index.html
@@ -49,12 +49,20 @@
                     </div>
                     <div class="window-content hero-content">
                         <div class="site-intro">
-                            <span class="intro-tag">[PURPOSE]</span>
-                            Welcome to my digital terminal. This space is a curated showcase of my technical
-                            evolution in <span class="intro-highlight">Data Science</span>, AI architecture, and
-                            community-driven development.
+                            <span class="intro-tag">[IDENTITY]</span>
+                            <strong>I’m Larsson</strong> — a Data Science student focused on AI, mobile apps, and
+                            problem solving.
+                            This space showcases my projects and technical growth.
                         </div>
-                        <h1>I'M <span class="highlight-magenta">LARSSON</span></h1>
+
+                        <div class="site-purpose"
+                            style="font-size: 1rem; line-height: 1.6; margin-bottom: 30px; color: #333;">
+                            I enjoy building practical applications that combine design, logic, and real-world
+                            usefulness.
+                            Currently, I’m exploring AI systems, data-driven solutions, and modern app development while
+                            continuously improving my skills through hands-on projects.
+                        </div>
+
                         <div class="hero-actions">
                             <a href="#projects" class="btn-green">VIEW PROJECTS</a>
                             <a href="#contact" class="btn-blue">CONNECT()</a>
