style: restore big heading and fix hero section layout

--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
                         </div>
                     </div>
                     <div class="window-content hero-content">
-                        <div class="site-intro">
+                        <h1>I'M <span class="highlight-magenta">LARSSON</span></h1>
+
+                        <div class="site-intro"
+                            style="margin-top: 20px; border-top: 2px solid var(--border-black); padding-top: 20px;">
                             <span class="intro-tag">[IDENTITY]</span>
-                            <strong>I’m Larsson</strong> — a Data Science student focused on AI, mobile apps, and
-                            problem solving.
+                            A Data Science student focused on AI, mobile apps, and problem solving.
                             This space showcases my projects and technical growth.
                         </div>
 
@@ -69,16 +71,17 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <!-- Stickers -->
-                <div class="sticker sticker-1">🧠</div>
-                <div class="sticker sticker-2">📊</div>
-                <div class="sticker sticker-3">📱</div>
-                <div class="sticker sticker-4">SUSTAINABLE_PEAK</div>
+            <!-- Stickers -->
+            <div class="sticker sticker-1">🧠</div>
+            <div class="sticker sticker-2">📊</div>
+            <div class="sticker sticker-3">📱</div>
+            <div class="sticker sticker-4">SUSTAINABLE_PEAK</div>
 
-                <div class="floating-box box-1">PYTHON</div>
-                <div class="floating-box box-2">REACT_NATIVE</div>
-                <div class="floating-box box-3">FIREBASE</div>
+            <div class="floating-box box-1">PYTHON</div>
+            <div class="floating-box box-2">REACT_NATIVE</div>
+            <div class="floating-box box-3">FIREBASE</div>
         </section>
 
         <section id="projects" class="projects">
