feat: replace about section with organized technical stack section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="logo">LARSSON.DS</div>
         <nav>
             <a href="#projects" class="nav-link">PROJECTS</a>
-            <a href="#about" class="nav-link">ABOUT</a>
+            <a href="#tech-stack" class="nav-link">TECH_STACK</a>
             <a href="#contact" class="nav-link btn-yellow">HIRE_ME.CSV</a>
         </nav>
     </header>
@@ -152,23 +152,57 @@
             </div>
         </section>
 
-        <section id="about" class="about">
-            <div class="about-container">
-                <div class="about-text window">
+        <section id="tech-stack" class="projects"
+            style="background: #f0f0f0; border-top: 4px solid var(--border-black);">
+            <h2 class="section-title">TECHNICAL_STACK</h2>
+            <div class="tech-stack-grid">
+                <!-- Category 1: Data Science -->
+                <div class="window tech-category">
                     <div class="window-header">
-                        <span class="window-title">PROFILE_BIO.MD</span>
+                        <span class="window-title">DATA_SCIENCE.LIB</span>
                     </div>
                     <div class="window-content">
-                        <h2>SYSTEMATIC GROWTH, <br> NOT BURNOUT.</h2>
-                        <p>I am Larsson, an MSc Data Science student at Kristu Jayanti College. I balance coding
-                            fundamentals (CLRS), LeetCode, and physical fitness with a goal to reach my peak within 1
-                            year through sustainable discipline.</p>
+                        <h3>ANALYSIS & ML</h3>
+                        <div class="tech-list">
+                            <span class="tech-item">PYTHON</span>
+                            <span class="tech-item">PANDAS</span>
+                            <span class="tech-item">NUMPY</span>
+                            <span class="tech-item">SCIKIT-LEARN</span>
+                            <span class="tech-item">MATPLOTLIB</span>
+                        </div>
                     </div>
                 </div>
-                <div class="ticker-container">
-                    <div class="ticker">
-                        <span>PANDAS • NUMPY • REACT NATIVE • FIREBASE • SQL • CALISTHENICS • CHESS • MIZORAM • KRISTU
-                            JAYANTI</span>
+
+                <!-- Category 2: App Dev -->
+                <div class="window tech-category">
+                    <div class="window-header">
+                        <span class="window-title">APP_DEV.CORE</span>
+                    </div>
+                    <div class="window-content">
+                        <h3>MOBILE & WEB</h3>
+                        <div class="tech-list">
+                            <span class="tech-item">REACT NATIVE</span>
+                            <span class="tech-item">JAVASCRIPT</span>
+                            <span class="tech-item">TYPESCRIPT</span>
+                            <span class="tech-item">FIREBASE</span>
+                            <span class="tech-item">CSS (BRUTAL)</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Category 3: Tools -->
+                <div class="window tech-category">
+                    <div class="window-header">
+                        <span class="window-title">ENVIRONMENT.CFG</span>
+                    </div>
+                    <div class="window-content">
+                        <h3>WORKFLOW</h3>
+                        <div class="tech-list">
+                            <span class="tech-item">GIT/GITHUB</span>
+                            <span class="tech-item">VS CODE</span>
+                            <span class="tech-item">GOOGLE COLAB</span>
+                            <span class="tech-item">EXPO</span>
+                        </div>
                     </div>
                 </div>
             </div>
