feat: update contact links with real information

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav>
             <a href="#projects" class="nav-link">PROJECTS</a>
             <a href="#tech-stack" class="nav-link">TECH_STACK</a>
-            <a href="#contact" class="nav-link btn-yellow">HIRE_ME.CSV</a>
+            <a href="mailto:lrtlarsson@gmail.com" class="nav-link btn-yellow">HIRE_ME.CSV</a>
         </nav>
     </header>
 
@@ -213,9 +213,10 @@
         <div class="footer-content">
             <h2>LET'S ASCEND TOGETHER.</h2>
             <div class="contact-links">
-                <a href="#" class="btn-magenta">GMAIL</a>
-                <a href="#" class="btn-blue">LINKEDIN</a>
-                <a href="#" class="btn-green">GITHUB</a>
+                <a href="mailto:lrtlarsson@gmail.com" class="btn-magenta">GMAIL</a>
+                <a href="https://www.linkedin.com/in/larsson-lalremtluanga-b53796379/" class="btn-blue"
+                    target="_blank">LINKEDIN</a>
+                <a href="https://github.com/LarssonDev" class="btn-green" target="_blank">GITHUB</a>
             </div>
         </div>
         <div class="copyright">
