feat: update Gmail Spam Remover project icon

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <span class="window-title">GMAIL_SPAM_REMOVER.PY</span>
                     </div>
                     <div class="window-content p-0">
-                        <img src="Reason party 2.jpg" alt="Gmail Spam Remover">
+                        <img src="spam_remover.jpg" alt="Gmail Spam Remover">
                         <div class="project-info">
                             <h3>SPAM REMOVER</h3>
                             <p>ML-powered spam detection using Naive Bayes and Gmail API for real-time inbox management.
