fix: prevent screenshot cropping in project gallery

--- a/project.html
+++ b/project.html
@@ -72,8 +72,7 @@
 
         .gallery img {
             width: 100%;
-            height: 250px;
-            object-fit: cover;
+            height: auto;
             border: 3px solid var(--border-black);
             transition: transform 0.2s;
         }
