feat: finalize ILA icon update and sync index.html

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <span class="window-title">ILA_COMMUNITY.APK</span>
                     </div>
                     <div class="window-content p-0">
-                        <img src="Reason party 2.jpg" alt="ILA App">
+                        <img src="icon.png" alt="ILA COMMUNITY">
                         <div class="project-info">
                             <h3>ILA COMMUNITY</h3>
                             <p>Event management app with Firebase, Razorpay, and Leaflet maps for Mizo community
