--- a/project.html
+++ b/project.html
@@ -106,7 +106,7 @@
             }
 
             .gallery img {
-                height: 200px;
+                height: auto;
             }
 
             .project-description h2 {
