feat: implement BUILD_FOR_YOU request system and admin dashboard

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <nav>
             <a href="#projects" class="nav-link">PROJECTS</a>
             <a href="#tech-stack" class="nav-link">TECH_STACK</a>
+            <a href="build.html" class="nav-link">BUILD_FOR_YOU</a>
             <a href="mailto:lrtlarsson@gmail.com" class="nav-link btn-yellow">HIRE_ME.CSV</a>
         </nav>
     </header>
