feat: revamp visual design of Build For You section with colors and stickers

--- a/index.html
+++ b/index.html
@@ -212,7 +212,12 @@
 
         <section id="build" class="build-section">
             <h2 class="section-title">BUILD_FOR_YOU</h2>
-            <p class="site-intro" style="text-align: center; max-width: 800px; margin: 0 auto 40px auto;">
+            <div class="sticker-container">
+                <div class="sticker sticker-build-1">IDEA_LOADING...</div>
+                <div class="sticker sticker-build-2">100%_CUSTOM</div>
+            </div>
+            <p class="site-intro"
+                style="text-align: center; max-width: 800px; margin: 0 auto 40px auto; position: relative; z-index: 2;">
                 Define your vision below. I process every proposal through my technical stack to determine feasibility
                 and alignment. High-impact projects prioritized.
             </p>
