--- a/project.html
+++ b/project.html
@@ -16,6 +16,9 @@
             padding: 60px 20px;
             max-width: 1000px;
             margin: 0 auto;
+            overflow-wrap: break-word;
+            word-wrap: break-word;
+            width: 100%;
         }
 
         .back-nav {
@@ -50,6 +53,17 @@
         .project-description {
             font-size: 1.2rem;
             line-height: 1.8;
+            overflow-wrap: break-word;
+            word-wrap: break-word;
+            max-width: 100%;
+        }
+
+        .project-description p,
+        .project-description ul,
+        .project-description li {
+            overflow-wrap: break-word;
+            word-wrap: break-word;
+            max-width: 100%;
         }
 
         .project-sidebar {
@@ -89,6 +103,8 @@
         @media (max-width: 768px) {
             .detail-page {
                 padding: 40px 15px;
+                max-width: 100vw;
+                box-sizing: border-box;
             }
 
             .project-body {
