--- a/project.html
+++ b/project.html
@@ -12,6 +12,16 @@
         href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&family=Syne:wght@400..800&display=swap"
         rel="stylesheet">
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        html,
+        body {
+            overflow-x: hidden;
+            max-width: 100vw;
+        }
+
         .detail-page {
             padding: 60px 20px;
             max-width: 1000px;
@@ -19,6 +29,20 @@
             overflow-wrap: break-word;
             word-wrap: break-word;
             width: 100%;
+            overflow-x: hidden;
+        }
+
+        h1,
+        h2,
+        h3,
+        h4,
+        p,
+        ul,
+        li,
+        div {
+            max-width: 100%;
+            overflow-wrap: break-word;
+            word-wrap: break-word;
         }
 
         .back-nav {
@@ -101,10 +125,27 @@
         }
 
         @media (max-width: 768px) {
+
+            html,
+            body {
+                overflow-x: hidden !important;
+                max-width: 100vw !important;
+            }
+
             .detail-page {
                 padding: 40px 15px;
                 max-width: 100vw;
                 box-sizing: border-box;
+            }
+
+            h1 {
+                font-size: 1.8rem !important;
+                word-break: break-word;
+            }
+
+            h2 {
+                font-size: 1.4rem !important;
+                word-break: break-word;
             }
 
             .project-body {
