--- a/project.html
+++ b/project.html
@@ -132,20 +132,36 @@
                 max-width: 100vw !important;
             }
 
+            * {
+                max-width: 100% !important;
+            }
+
             .detail-page {
-                padding: 40px 15px;
-                max-width: 100vw;
-                box-sizing: border-box;
+                padding: 40px 8px !important;
+                max-width: 100vw !important;
+                box-sizing: border-box !important;
+            }
+
+            .window-content {
+                padding: 12px 8px !important;
+                overflow-x: hidden !important;
             }
 
             h1 {
-                font-size: 1.8rem !important;
-                word-break: break-word;
+                font-size: 1.6rem !important;
+                word-break: break-word !important;
             }
 
             h2 {
-                font-size: 1.4rem !important;
-                word-break: break-word;
+                font-size: 1.3rem !important;
+                word-break: break-word !important;
+            }
+
+            p,
+            li,
+            span {
+                word-break: break-word !important;
+                hyphens: auto !important;
             }
 
             .project-body {
