feat: add vibrant decoration to technical stack section

--- a/index.html
+++ b/index.html
@@ -153,8 +153,11 @@
             </div>
         </section>
 
-        <section id="tech-stack" class="projects"
-            style="background: #f0f0f0; border-top: 4px solid var(--border-black);">
+        <section id="tech-stack" class="tech-stack-section">
+            <div class="sticker-container">
+                <div class="sticker-tech-1">FULL_STACK</div>
+                <div class="sticker-tech-2">💻 CODE_MODE</div>
+            </div>
             <h2 class="section-title">TECHNICAL_STACK</h2>
             <div class="tech-stack-grid">
                 <!-- Category 1: Data Science -->
