Fix mobile layout: bump breakpoint to 900px, hide hire btn on mobile, clean up emoji from tech headings

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&family=Syne:wght@400..800&display=swap"
         rel="stylesheet">
-    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js"></script>
 </head>
 
 <body>
@@ -67,8 +66,7 @@
                     </div>
                     <div class="window-content hero-content">
                         <p class="hero-greeting">Hey, I'm</p>
-                        <h1 style="white-space:nowrap;font-size:clamp(2.2rem,6vw,5rem);">LARSSON<span
-                                class="cursor-blink">_</span></h1>
+                        <h1 style="font-size:clamp(2.2rem,6vw,5rem);">LARSSON<span class="cursor-blink">_</span></h1>
                         <p class="hero-tagline">Learning to build <span class="highlight-magenta">smart apps</span> &
                             <span class="highlight-green">data systems</span>
                         </p>
@@ -253,7 +251,7 @@
                         <span class="window-title">DATA_SCIENCE.LIB</span>
                     </div>
                     <div class="window-content">
-                        <h3>🔬 ANALYSIS & ML</h3>
+                        <h3>ANALYSIS &amp; ML</h3>
                         <div class="tech-list">
                             <span class="tech-item">PYTHON</span>
                             <span class="tech-item">PANDAS</span>
@@ -268,7 +266,7 @@
                         <span class="window-title">APP_DEV.CORE</span>
                     </div>
                     <div class="window-content">
-                        <h3>📱 MOBILE & WEB</h3>
+                        <h3>MOBILE &amp; WEB</h3>
                         <div class="tech-list">
                             <span class="tech-item">REACT NATIVE</span>
                             <span class="tech-item">FIREBASE</span>
@@ -281,7 +279,7 @@
                         <span class="window-title">ENVIRONMENT.CFG</span>
                     </div>
                     <div class="window-content">
-                        <h3>⚙️ WORKFLOW</h3>
+                        <h3>WORKFLOW</h3>
                         <div class="tech-list">
                             <span class="tech-item">GIT/GITHUB</span>
                             <span class="tech-item">VS CODE</span>
@@ -374,6 +372,7 @@
         </div>
     </footer>
 
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js"></script>
     <script src="main.js"></script>
     <script>lucide.createIcons();</script>
 </body>
