--- a/index.html
+++ b/index.html
@@ -141,16 +141,18 @@
             <div class="project-grid">
 
                 <!-- Project 1: ILA App -->
-                <a href="project.html?id=ila" class="project-card window reveal">
+                <div class="project-card window reveal">
                     <div class="window-header">
                         <span class="window-title">ILA_COMMUNITY.APK</span>
                         <span class="card-tag-header">#REACT_NATIVE</span>
                     </div>
                     <div class="window-content p-0">
-                        <div class="card-img-wrap">
-                            <img src="icon.png" alt="ILA COMMUNITY">
-                            <div class="card-overlay">VIEW PROJECT →</div>
-                        </div>
+                        <a href="project.html?id=ila">
+                            <div class="card-img-wrap">
+                                <img src="icon.png" alt="ILA COMMUNITY">
+                                <div class="card-overlay">VIEW DETAILS →</div>
+                            </div>
+                        </a>
                         <div class="project-info">
                             <h3>ILA COMMUNITY</h3>
                             <p>Event management app with Firebase, Razorpay, and Leaflet maps for Mizo community
@@ -160,69 +162,94 @@
                                 <span class="badge badge-fb">Firebase</span>
                                 <span class="badge badge-js">Razorpay</span>
                             </div>
+                            <div class="card-actions">
+                                <a href="project.html?id=ila" class="card-btn card-btn-primary">VIEW DETAILS</a>
+                                <a href="https://github.com/LarssonDev" target="_blank"
+                                    class="card-btn card-btn-secondary"><i data-lucide="github" class="btn-icon"></i>
+                                    GITHUB</a>
+                            </div>
                         </div>
                     </div>
-                </a>
+                </div>
 
                 <!-- Project 2: NOVA -->
-                <a href="project.html?id=anatomypro" class="project-card window reveal">
+                <div class="project-card window reveal">
                     <div class="window-header">
                         <span class="window-title">NOVA.EXE</span>
                         <span class="card-tag-header">#HABIT_TECH</span>
                     </div>
                     <div class="window-content p-0">
-                        <div class="card-img-wrap">
-                            <img src="anatomy_pulse.png" alt="NOVA">
-                            <div class="card-overlay">VIEW PROJECT →</div>
-                        </div>
+                        <a href="project.html?id=anatomypro">
+                            <div class="card-img-wrap">
+                                <img src="anatomy_pulse.png" alt="NOVA">
+                                <div class="card-overlay">VIEW DETAILS →</div>
+                            </div>
+                        </a>
                         <div class="project-info">
                             <h3>NOVA</h3>
-                            <p>Habit tracker featuring an interactive anatomy SVG model and analytics for physical
-                                growth.</p>
+                            <p>Habit tracker with an interactive anatomy SVG model and analytics for physical growth.
+                            </p>
                             <div class="tech-badges">
                                 <span class="badge badge-rn">React Native</span>
                                 <span class="badge badge-ts">TypeScript</span>
                                 <span class="badge badge-data">SVG/Skia</span>
                             </div>
+                            <div class="card-actions">
+                                <a href="project.html?id=anatomypro" class="card-btn card-btn-primary">VIEW DETAILS</a>
+                                <a href="https://github.com/LarssonDev" target="_blank"
+                                    class="card-btn card-btn-secondary"><i data-lucide="github" class="btn-icon"></i>
+                                    GITHUB</a>
+                            </div>
                         </div>
                     </div>
-                </a>
+                </div>
 
                 <!-- Project 3: Gmail Spam Remover -->
-                <a href="project.html?id=spam-remover" class="project-card window reveal">
+                <div class="project-card window reveal">
                     <div class="window-header">
                         <span class="window-title">GMAIL_SPAM_REMOVER.PY</span>
                         <span class="card-tag-header">#ML</span>
                     </div>
                     <div class="window-content p-0">
-                        <div class="card-img-wrap">
-                            <img src="spam_remover.jpg" alt="Gmail Spam Remover">
-                            <div class="card-overlay">VIEW PROJECT →</div>
-                        </div>
+                        <a href="project.html?id=spam-remover">
+                            <div class="card-img-wrap">
+                                <img src="spam_remover.jpg" alt="Gmail Spam Remover">
+                                <div class="card-overlay">VIEW DETAILS →</div>
+                            </div>
+                        </a>
                         <div class="project-info">
                             <h3>SPAM REMOVER</h3>
-                            <p>ML-powered spam detection using Naive Bayes and Gmail API for real-time inbox
-                                management.</p>
+                            <p>ML-powered spam detection using Naive Bayes and Gmail API for real-time inbox management.
+                            </p>
                             <div class="tech-badges">
                                 <span class="badge badge-py">Python</span>
-                                <span class="badge badge-data">Scikit-Learn</span>
+                                <span class="badge badge-data">Naive Bayes</span>
                                 <span class="badge badge-js">OAuth2</span>
+                            </div>
+                            <div class="card-actions">
+                                <a href="project.html?id=spam-remover" class="card-btn card-btn-primary">VIEW
+                                    DETAILS</a>
+                                <a href="https://github.com/LarssonDev" target="_blank"
+                                    class="card-btn card-btn-secondary"><i data-lucide="github" class="btn-icon"></i>
+                                    GITHUB</a>
                             </div>
                         </div>
                     </div>
-                </a>
+                </div>
 
                 <!-- Project 4: INBAWK -->
-                <a href="project.html?id=inbawk" class="project-card window reveal">
+                <div class="project-card window reveal">
                     <div class="window-header">
                         <span class="window-title">INBAWK_CARDS.APK</span>
                         <span class="card-tag-header">#GAMING</span>
                     </div>
                     <div class="window-content p-0">
-                        <div class="card-img-wrap">
-                            <img src="inbawk_board.png" alt="INBAWK">
-                            <div class="card-overlay">VIEW PROJECT →</div>
-                        </div>
+                        <a href="project.html?id=inbawk">
+                            <div class="card-img-wrap">
+                                <img src="inbawk_board.png" alt="INBAWK">
+                                <div class="card-overlay">VIEW DETAILS →</div>
+                            </div>
+                        </a>
                         <div class="project-info">
                             <h3>INBAWK CARDS</h3>
                             <p>Real-time multiplayer card game with Firebase backend and premium casino aesthetic.</p>
@@ -231,9 +258,15 @@
                                 <span class="badge badge-fb">Firebase</span>
                                 <span class="badge badge-ts">Expo</span>
                             </div>
+                            <div class="card-actions">
+                                <a href="project.html?id=inbawk" class="card-btn card-btn-primary">VIEW DETAILS</a>
+                                <a href="https://github.com/LarssonDev" target="_blank"
+                                    class="card-btn card-btn-secondary"><i data-lucide="github" class="btn-icon"></i>
+                                    GITHUB</a>
+                            </div>
                         </div>
                     </div>
-                </a>
+                </div>
             </div>
         </section>
 
